<resources>
    <string name="app_name">BasketBall</string>
    <string name="_0">0</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="los_angeles_lakers">Los Angeles Lakers</string>
    <string name="los_angeles_clippers">Los Angeles Clippers</string>
    <string name="free_throw">Free throw</string>
    <string name="reset_scores">Reset Scores</string>
</resources>